# lnrpc/rpc.swagger.json
@@ -2279,6 +2279,20 @@
         }
       }
     },
+    "lnrpcSendMultiResponse": {
+      "type": "object",
+      "properties": {
+        "payment_response": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/lnrpcSendResponseWithHash"
+          }
+        },
+        "payment_error": {
+          "type": "string"
+        }
+      }
+    },
     "lnrpcSendRequest": {
       "type": "object",
       "properties": {
@@ -2319,6 +2333,25 @@
     "lnrpcSendResponse": {
       "type": "object",
       "properties": {
+        "payment_error": {
+          "type": "string"
+        },
+        "payment_preimage": {
+          "type": "string",
+          "format": "byte"
+        },
+        "payment_route": {
+          "$ref": "#/definitions/lnrpcRoute"
+        }
+      }
+    },
+    "lnrpcSendResponseWithHash": {
+      "type": "object",
+      "properties": {
+        "r_hash": {
+          "type": "string",
+          "format": "byte"
+        },
         "payment_error": {
           "type": "string"
         },
